04/29/2023: Push to remote

--- a/rdd_linkedin_views.ipynb
+++ b/rdd_linkedin_views.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fcb2e383",
+   "id": "36faffba",
    "metadata": {},
    "outputs": [
     {
@@ -11,37 +11,36 @@
      "output_type": "stream",
      "text": [
       "total 4\n",
-      "drwxr-xr-x 3 itv005077 students 4096 Apr 22 12:28 trendytech\n"
+      "drwxr-xr-x 3 itv005077 students 4096 Apr 29 05:40 notebooks\n"
      ]
     }
    ],
    "source": [
-    "!ls -l ~/data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3e9459d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir ~/data/input"
+    "!ls -l ~/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf4e2a86",
+   "id": "24b497ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p ~/data/input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a091d12",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 8\n",
-      "drwxr-xr-x 2 itv005077 students 4096 Apr 24 15:54 input\n",
-      "drwxr-xr-x 3 itv005077 students 4096 Apr 22 12:28 trendytech\n"
+      "total 4\n",
+      "drwxr-xr-x 2 itv005077 students 4096 Apr 29 05:42 input\n"
      ]
     }
    ],
@@ -50,9 +49,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10be4376",
+   "metadata": {},
+   "source": [
+    "### Go to terminal:\n",
+    "1. cd ~/data/input\n",
+    "2. vi linkedin_views.csv\n",
+    "3. press 'i'\n",
+    "4. paste \n",
+    "1,Manasa,Sumit\n",
+    "2,Deepa,Sumit\n",
+    "3,Sumit,Manasa\n",
+    "4,Manasa,Deepa\n",
+    "5,Deepa,Manasa\n",
+    "6,Shilpy,Manasa\n",
+    "5. press ':wq!'\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "61e30068",
+   "execution_count": 6,
+   "id": "a957cf6e",
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ff47a781",
+   "execution_count": 7,
+   "id": "6148cde7",
    "metadata": {},
    "outputs": [
     {
@@ -92,37 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "77064851",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 1 items\n",
-      "-rw-r--r--   3 itv005077 supergroup      18322 2023-04-22 12:28 data/search_data.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "!hadoop fs -ls data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7252bbfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!hadoop fs -copyFromLocal ~/data/input/linkedin_views.csv data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "1b98d829",
+   "execution_count": 8,
+   "id": "559bb943",
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +119,37 @@
      "output_type": "stream",
      "text": [
       "Found 2 items\n",
-      "-rw-r--r--   3 itv005077 supergroup         90 2023-04-24 16:05 data/linkedin_views.csv\n",
-      "-rw-r--r--   3 itv005077 supergroup      18322 2023-04-22 12:28 data/search_data.txt\n"
+      "drwx------   - itv005077 supergroup          0 2023-04-15 10:10 .Trash\n",
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-04-29 05:40 .sparkStaging\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hadoop fs -ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "30f20f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hadoop fs -mkdir -p data/input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0e3ae5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 items\n",
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-04-29 06:02 data/input\n"
      ]
     }
    ],
@@ -140,40 +158,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "82ee4eb0",
-   "metadata": {},
-   "source": [
-    "### find how many times each person's profile is viewed "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6d366831",
+   "id": "eae51668",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
+    "!hadoop fs -copyFromLocal ~/data/input/linkedin_views.csv data/input"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a181905d",
+   "id": "509303b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 items\n",
+      "-rw-r--r--   3 itv005077 supergroup         90 2023-04-29 06:03 data/input/linkedin_views.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "spark = SparkSession.builder \\\n",
-    "    .master('yarn') \\\n",
-    "    .appName('Linkedin-Views') \\\n",
-    "    .getOrCreate()"
+    "!hadoop fs -ls data/input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db9c185c",
+   "metadata": {},
+   "source": [
+    "## Find how many times each person's profile is viewed "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0ff93ea3",
+   "id": "bf61daab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass as gp\n",
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a1d00f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_name = gp.getuser()\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(f'{user_name}-linkedin-view-program') \\\n",
+    "    .master('yarn') \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c49fa413",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +243,7 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>yarn</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Linkedin-Views</code></dd>\n",
+       "                <dd><code>itv005077-linkedin-view-program</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -202,10 +251,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f009497bc18>"
+       "<pyspark.sql.session.SparkSession at 0x7f9328bb6198>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ee65ac34",
+   "execution_count": 16,
+   "id": "7fd37fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d9ed7da1",
+   "execution_count": 17,
+   "id": "25179925",
    "metadata": {},
    "outputs": [
     {
@@ -245,16 +294,16 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>yarn</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Linkedin-Views</code></dd>\n",
+       "                <dd><code>itv005077-linkedin-view-program</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        "
       ],
       "text/plain": [
-       "<SparkContext master=yarn appName=Linkedin-Views>"
+       "<SparkContext master=yarn appName=itv005077-linkedin-view-program>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,19 +313,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "ed791346",
+   "cell_type": "markdown",
+   "id": "c7961dce",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file_read_rdd = sc.textFile('/user/itv005077/data/linkedin_views.csv')"
+    "### Create RDD's"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7ce10173",
+   "execution_count": 19,
+   "id": "7aad201b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_PATH = f'/user/{user_name}/data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5da490b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd_file_read = sc.textFile(f'{FILE_PATH}/input/linkedin_views.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2f4ee155",
    "metadata": {},
    "outputs": [
     {
@@ -289,29 +356,29 @@
        " '5,Deepa,Manasa']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_read_rdd.take(5)"
+    "rdd_file_read.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "6d5646c8",
+   "execution_count": 22,
+   "id": "8cf3d958",
    "metadata": {},
    "outputs": [],
    "source": [
-    "linkedin_rdd = file_read_rdd.map(lambda row : row.split(','))"
+    "rdd_split_file_read = rdd_file_read.map(lambda row : row.split(','))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b717341c",
+   "execution_count": 23,
+   "id": "875c2519",
    "metadata": {},
    "outputs": [
     {
@@ -324,29 +391,29 @@
        " ['5', 'Deepa', 'Manasa']]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linkedin_rdd.take(5)"
+    "rdd_split_file_read.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "523133ea",
+   "execution_count": 24,
+   "id": "d9b72a21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile_rdd = linkedin_rdd.map(lambda col : col[2])"
+    "rdd_profile_file_read = rdd_split_file_read.map(lambda col : col[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c1647fa7",
+   "execution_count": 25,
+   "id": "519b2fa3",
    "metadata": {},
    "outputs": [
     {
@@ -355,29 +422,29 @@
        "['Sumit', 'Sumit', 'Manasa', 'Deepa', 'Manasa']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "profile_rdd.take(5)"
+    "rdd_profile_file_read.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "0063270f",
+   "execution_count": 27,
+   "id": "9b099cbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "individual_view_rdd = profile_rdd.countByValue()"
+    "output = rdd_profile_file_read.countByValue()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "47b7fc86",
+   "execution_count": 28,
+   "id": "35a968a8",
    "metadata": {},
    "outputs": [
     {
@@ -386,19 +453,19 @@
        "defaultdict(int, {'Sumit': 2, 'Manasa': 3, 'Deepa': 1})"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "individual_view_rdd"
+    "output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "7f407221",
+   "execution_count": 29,
+   "id": "ec1fc4c7",
    "metadata": {},
    "outputs": [
     {
@@ -412,13 +479,13 @@
     }
    ],
    "source": [
-    "for profile, no_views in individual_view_rdd.items():\n",
+    "for profile, no_views in output.items():\n",
     "    print(f'{profile}\\'s profile has been viewed {no_views} times')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "716d64e4",
+   "id": "6bf56318",
    "metadata": {},
    "source": [
     "### alternate approach"
@@ -426,18 +493,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "19ec0231",
+   "execution_count": 30,
+   "id": "48171391",
    "metadata": {},
    "outputs": [],
    "source": [
-    "individual_view_rdd1 = profile_rdd.map(lambda profile : (profile,1))"
+    "rdd_individual_view = rdd_profile_file_read.map(lambda profile : (profile,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "838a0b7b",
+   "execution_count": 31,
+   "id": "54674bb6",
    "metadata": {},
    "outputs": [
     {
@@ -446,29 +513,29 @@
        "[('Sumit', 1), ('Sumit', 1), ('Manasa', 1), ('Deepa', 1), ('Manasa', 1)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "individual_view_rdd1.take(5)"
+    "rdd_individual_view.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "cf7f0a57",
+   "execution_count": 32,
+   "id": "04878876",
    "metadata": {},
    "outputs": [],
    "source": [
-    "views_per_profile_rdd = individual_view_rdd1.reduceByKey(lambda x,y : x+y)"
+    "rdd_reduce_individual_view = rdd_individual_view.reduceByKey(lambda x,y : x+y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "5d1fc91f",
+   "execution_count": 33,
+   "id": "69c9498b",
    "metadata": {},
    "outputs": [
     {
@@ -477,29 +544,29 @@
        "[('Sumit', 2), ('Deepa', 1), ('Manasa', 3)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "views_per_profile_rdd.take(5)"
+    "rdd_reduce_individual_view.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "173d39f6",
+   "execution_count": 34,
+   "id": "d512cb2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "views = views_per_profile_rdd.collect()"
+    "output = rdd_reduce_individual_view.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "1031577f",
+   "execution_count": 36,
+   "id": "ae4abbc9",
    "metadata": {},
    "outputs": [
     {
@@ -508,19 +575,19 @@
        "[('Sumit', 2), ('Deepa', 1), ('Manasa', 3)]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "views"
+    "output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "a9a5ed31",
+   "execution_count": 37,
+   "id": "b5fda9d5",
    "metadata": {},
    "outputs": [
     {
@@ -534,17 +601,135 @@
     }
    ],
    "source": [
-    "for profile, no_views in views:\n",
+    "for profile, no_views in output:\n",
     "    print(f'{profile}\\'s profile has been viewed {no_views} times')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d50d6a8f",
+   "execution_count": 38,
+   "id": "2e00584e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sc.stop()\n",
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5865b65",
+   "metadata": {},
+   "source": [
+    "### Deleting working directories from both local and hdfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3a7da3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 4\n",
+      "drwxr-xr-x 2 itv005077 students 4096 Apr 29 06:01 input\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l ~/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f9fb8cec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r ~/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "62db8b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 4\n",
+      "drwxr-xr-x 3 itv005077 students 4096 Apr 29 06:17 notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l ~/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "86210e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 items\n",
+      "drwx------   - itv005077 supergroup          0 2023-04-15 10:10 .Trash\n",
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-04-29 06:18 .sparkStaging\n",
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-04-29 06:02 data\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hadoop fs -ls "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0780e060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-04-29 06:19:49,657 INFO fs.TrashPolicyDefault: Moved: 'hdfs://m01.itversity.com:9000/user/itv005077/data' to trash at: hdfs://m01.itversity.com:9000/user/itv005077/.Trash/Current/user/itv005077/data1682763589631\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hadoop fs -rm -r data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "70c84aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2 items\n",
+      "drwx------   - itv005077 supergroup          0 2023-04-15 10:10 .Trash\n",
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-04-29 06:18 .sparkStaging\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hadoop fs -ls"
+   ]
   }
  ],
  "metadata": {
