--- a/rdd_parallelize.ipynb
+++ b/rdd_parallelize.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "'bhagyashrilokakalyan'"
+       "'itv005077'"
       ]
      },
      "execution_count": 3,
@@ -41,19 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(f'{user}-parallelize') \\\n",
-    "    .master('local[1]') \\\n",
+    "    .master('yarn') \\\n",
     "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +73,15 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.0.89:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://g02.itversity.com:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.3.2</code></dd>\n",
+       "                <dd><code>v3.0.1</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[1]</code></dd>\n",
+       "                <dd><code>yarn</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>bhagyashrilokakalyan-parallelize</code></dd>\n",
+       "                <dd><code>itv005077-parallelize</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -82,10 +89,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fc07c979f70>"
+       "<pyspark.sql.session.SparkSession at 0x7f43308e72e8>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,17 +102,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "local_var = (1,2,3,4,{'a':1},'b','A','Z','Y',['Bhagya','Ayush','Lucky'])"
+    "### 1. Create a local <b>COLLECTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_collection = (1,2,3,4,{'a':1},'b','A','Z','Y',['Bhagya','Ayush','Lucky'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,27 +128,27 @@
        "(1, 2, 3, 4, {'a': 1}, 'b', 'A', 'Z', 'Y', ['Bhagya', 'Ayush', 'Lucky'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "local_var"
+    "local_collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdd_local_parallelize = spark.sparkContext.parallelize(local_var)"
+    "rdd_col_parallelize = spark.sparkContext.parallelize(local_collection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,36 +157,43 @@
        "[1, 2, 3, 4, {'a': 1}, 'b', 'A', 'Z', 'Y', ['Bhagya', 'Ayush', 'Lucky']]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_local_parallelize.take(15)"
+    "rdd_col_parallelize.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Create a local <b>STRING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_var = 'AYUSH'"
+    "local_str = 'AYUSH'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdd_local_parallelize = spark.sparkContext.parallelize(local_var)"
+    "rdd_str_parallelize = spark.sparkContext.parallelize(local_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +202,25 @@
        "['A', 'Y', 'U', 'S', 'H']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_local_parallelize.take(10)"
+    "rdd_str_parallelize.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the Length of a local itterable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,47 +229,69 @@
        "5"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(local_var)"
+    "len(local_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the Length of a Distributed RDD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "10"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_local_parallelize.count()"
+    "rdd_col_parallelize.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "CASE WHEN RDD SIZE >= 128 MB \n",
+    "    THEN rdd.getNumPartitions()\n",
+    "ELSE\n",
+    "    CASE WHEN RDD IS CREATED USING A LOCAL ITERABLE (USING parallelize())\n",
+    "        THEN sc.defaultParallelism\n",
+    "    CASE WHEN RDD IS LOADED USING A FILE (sc.textFile())\n",
+    "        THEN sc.defaultMinPartitions\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,37 +322,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_local_parallelize.getNumPartitions()"
+    "rdd_col_parallelize.getNumPartitions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# end of file"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Pyspark 3",
    "language": "python",
-   "name": "python3"
+   "name": "pyspark3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -314,10 +375,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.6.12"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
