05/05/2023: Push to Remote

--- a/rdd_campaign_analysis.ipynb
+++ b/rdd_campaign_analysis.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "b6091cf6",
+   "id": "52763794",
    "metadata": {},
    "source": [
     "## Import Modules"
@@ -12,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f75b2f95",
+   "id": "1057b3cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c27a31f5",
+   "id": "326b832f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "74b574b7",
+   "id": "a531265a",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +49,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://g02.itversity.com:4043\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://g02.itversity.com:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -66,7 +65,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f785bcb63c8>"
+       "<pyspark.sql.session.SparkSession at 0x7f170dc92ba8>"
       ]
      },
      "execution_count": 3,
@@ -79,9 +78,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "3ee603a9",
+   "id": "b33638e7",
    "metadata": {},
    "source": [
     "### Copy the files from local to hdfs"
@@ -89,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9001acfa",
+   "execution_count": 4,
+   "id": "3b1273d5",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +97,7 @@
      "text": [
       "Found 2 items\n",
       "drwx------   - itv005077 supergroup          0 2023-04-15 10:10 .Trash\n",
-      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-01 05:47 .sparkStaging\n"
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-02 01:19 .sparkStaging\n"
      ]
     }
    ],
@@ -109,8 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "3f530dac",
+   "execution_count": 5,
+   "id": "7e7af4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "e2e371d0",
+   "execution_count": 6,
+   "id": "a9765401",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "Found 1 items\n",
-      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-01 06:03 data/input\n"
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-02 01:19 data/input\n"
      ]
     }
    ],
@@ -138,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "652e65b5",
+   "execution_count": 7,
+   "id": "dc608e2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e092dbb5",
+   "execution_count": 8,
+   "id": "2510b5bc",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "Found 1 items\n",
-      "-rw-r--r--   3 itv005077 supergroup      95947 2023-05-01 06:04 data/input/google-ads-data.csv\n"
+      "-rw-r--r--   3 itv005077 supergroup      95947 2023-05-02 01:20 data/input/google-ads-data.csv\n"
      ]
     }
    ],
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a42fe75",
+   "id": "7490e6e0",
    "metadata": {},
    "source": [
     "### Read from Local File System"
@@ -175,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3351f862",
+   "execution_count": 9,
+   "id": "8a4e84f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "d611b88d",
+   "execution_count": 10,
+   "id": "ea07576c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "632b32ba",
+   "execution_count": 11,
+   "id": "3efa7bac",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +208,7 @@
        " 'ameerpet big data training cost,Broad match,None,TrendyTech Search India,Broad Match #3,2,1,50%,INR,34.86,34.86,0,0,0%,Search']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "c5a4184a",
+   "execution_count": 12,
+   "id": "9d8c8b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "4df7f94a",
+   "execution_count": 13,
+   "id": "12e8ecdf",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +268,7 @@
        "  'Search']]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "69ba0d53",
+   "execution_count": 14,
+   "id": "bbaa6654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "0edaf291",
+   "execution_count": 15,
+   "id": "8fdab8d8",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +303,7 @@
        " (34.86, 'ameerpet big data training cost')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "560fb153",
+   "execution_count": 16,
+   "id": "6a4ea396",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "69535d33",
+   "execution_count": 17,
+   "id": "d9d256e7",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +344,7 @@
        " (28.45, 'hadoop')]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,8 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "95b048e8",
+   "execution_count": 18,
+   "id": "dcbe763d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,8 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "a9f0d7be",
+   "execution_count": 19,
+   "id": "721cdd1f",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +384,7 @@
        " ('hadoop', 28.45)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,8 +395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "87603b0c",
+   "execution_count": 20,
+   "id": "8018788a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "bd71b04d",
+   "execution_count": 21,
+   "id": "f4329ec3",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +424,7 @@
        " ('good', 83.86)]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "38f9cc7d",
+   "execution_count": 22,
+   "id": "c0f83cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "fd005263",
+   "execution_count": 23,
+   "id": "cebd72af",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +474,7 @@
        " ('to', 848.3299999999999)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,15 +485,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "fa099d38",
+   "execution_count": 24,
+   "id": "b82194f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-05-01 06:15:41,452 INFO fs.TrashPolicyDefault: Moved: 'hdfs://m01.itversity.com:9000/user/itv005077/data' to trash at: hdfs://m01.itversity.com:9000/user/itv005077/.Trash/Current/user/itv005077/data1682936141425\n"
+      "2023-05-02 01:20:24,767 INFO fs.TrashPolicyDefault: Moved: 'hdfs://m01.itversity.com:9000/user/itv005077/data' to trash at: hdfs://m01.itversity.com:9000/user/itv005077/.Trash/Current/user/itv005077/data1683004824748\n"
      ]
     }
    ],
@@ -505,8 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "26db370f",
+   "execution_count": 25,
+   "id": "86850b26",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +513,7 @@
      "text": [
       "Found 2 items\n",
       "drwx------   - itv005077 supergroup          0 2023-04-15 10:10 .Trash\n",
-      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-01 05:47 .sparkStaging\n"
+      "drwxr-xr-x   - itv005077 supergroup          0 2023-05-02 01:19 .sparkStaging\n"
      ]
     }
    ],
@@ -525,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "4fcdd0f9",
+   "execution_count": 26,
+   "id": "d53804ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "bc2b0c2c",
+   "execution_count": 27,
+   "id": "99c23aee",
    "metadata": {},
    "outputs": [],
    "source": [
