07/15/2023: Push to Remote

--- a/df_sample.ipynb
+++ b/df_sample.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1f83678",
+   "id": "166a070e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ef752fc",
+   "id": "5fddfe4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d0256db",
+   "id": "740d4e46",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fb989c98908>"
+       "<pyspark.sql.session.SparkSession at 0x7f4168d3c978>"
       ]
      },
      "execution_count": 3,
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2055e53e",
+   "id": "46e5aa86",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67df6597",
+   "id": "af705b1b",
    "metadata": {},
    "outputs": [
     {
@@ -113,21 +113,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0dda865d",
+   "id": "3f45576f",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = spark.read \\\n",
     "        .format('csv') \\\n",
-    "        .option(\"header\", \"true\") \\\n",
+    "        .option(\"header\", 'true') \\\n",
     "        .option('inferSchema', 'false') \\\n",
+    "        .option('delimiter', ',') \\\n",
+    "        .option('quote', '\\\"') \\\n",
+    "        .option('escape', '\\\"') \\\n",
+    "        .option(\"escapeQuotes\", 'true') \\\n",
     "        .load('/public/crime/csv/*')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "74a971ef",
+   "id": "9ad3babd",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76b629a1",
+   "id": "76204ff8",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e252874",
+   "id": "4dbffccd",
    "metadata": {},
    "source": [
     "## Read JSON file"
@@ -204,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "15548f4a",
+   "id": "7877b52e",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1ab01b6c",
+   "id": "09df6a0c",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "18fed2e7",
+   "id": "0c8659ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "016fa43b",
+   "id": "32a53ffc",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29e029d",
+   "id": "0f148278",
    "metadata": {},
    "source": [
     "### Read PARQUET File"
@@ -297,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e5bde5bb",
+   "id": "bf5b78b6",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e580ab43",
+   "id": "18028577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "812d5b78",
+   "id": "babc180a",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "397d49e2",
+   "id": "3dff36a8",
    "metadata": {},
    "source": [
     "### Read ORC File"
@@ -365,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c847946c",
+   "id": "13a867d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7249fb20",
+   "id": "dcefa5f4",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8d3cb87",
+   "id": "48d04be7",
    "metadata": {},
    "source": [
     "### Filter Rows\n",
@@ -414,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "84e05006",
+   "id": "af90d0ea",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f1035dc9",
+   "id": "8a4e25f0",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd2ba0f9",
+   "id": "7f34a895",
    "metadata": {},
    "source": [
     "### Create Spark Table from Dataframe (df -> table)"
@@ -477,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0ffcd830",
+   "id": "da70b9b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "781453df",
+   "id": "413f7743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "456c731e",
+   "id": "bf549dd7",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda4151f",
+   "id": "1c66c393",
    "metadata": {},
    "source": [
     "### Create Dataframe from Spark Table (table -> df)"
@@ -548,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e7d10c8b",
+   "id": "4c41cb73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b8655a62",
+   "id": "7b16f44c",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8410024e",
+   "id": "2f5b8bda",
    "metadata": {},
    "outputs": [],
    "source": [
