--- a/df_examples.ipynb
+++ b/df_examples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "17cf8103",
+   "id": "af4bbc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "390a7992",
+   "id": "c1595de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7f610623",
+   "id": "ca7b942f",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fa0935649e8>"
+       "<pyspark.sql.session.SparkSession at 0x7f7919261908>"
       ]
      },
      "execution_count": 3,
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "04fee36d",
+   "id": "a7543c00",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5a6a9f4d",
+   "id": "09dff0ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3ea7559",
+   "id": "7cfa65e1",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0fec4945",
+   "id": "4ac743d5",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d0c45926",
+   "id": "922f2a8c",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "24524a9d",
+   "id": "183a25b4",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "82234697",
+   "id": "a67127de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea51921f",
+   "id": "ce8c4f8c",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e028c947",
+   "id": "94827edd",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "869d876a",
+   "id": "26ec7274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6755543c",
+   "id": "411161e7",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "29e105cf",
+   "id": "6393bb76",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ec4df28a",
+   "id": "45660ae9",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4affe7ab",
+   "id": "9b42d962",
    "metadata": {},
    "outputs": [],
    "source": [
