06/30/2023: Push to Remote

--- a/Week-8_Assignment-2.ipynb
+++ b/Week-8_Assignment-2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27f3e74c",
+   "id": "6f65e66c",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "954b0d69",
+   "id": "02b9971b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "824cf1f7",
+   "id": "906eaeda",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5fa5639c",
+   "id": "e5cedbce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d9cb632",
+   "id": "612364f7",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://g02.itversity.com:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://g02.itversity.com:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -112,7 +112,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f9d35130d68>"
+       "<pyspark.sql.session.SparkSession at 0x7fb5b92eacf8>"
       ]
      },
      "execution_count": 5,
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "359c64f4",
+   "id": "7ec972e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d487168d",
+   "id": "c2256f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d31d63d",
+   "id": "e48deff8",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b08ebd",
+   "id": "c73e33ab",
    "metadata": {},
    "source": [
     "## Programatic Approach"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3ee9a9fb",
+   "id": "22dcde07",
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b5e769d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-----------+\n",
+      "|department_id|sum(salary)|\n",
+      "+-------------+-----------+\n",
+      "|         null|     7000.0|\n",
+      "|           10|     4400.0|\n",
+      "|           20|    19000.0|\n",
+      "|           30|    24900.0|\n",
+      "|           40|     6500.0|\n",
+      "|           50|   156400.0|\n",
+      "|           60|    28800.0|\n",
+      "|           70|    10000.0|\n",
+      "|           80|   304500.0|\n",
+      "|           90|    58000.0|\n",
+      "|          100|    51600.0|\n",
+      "|          110|    20300.0|\n",
+      "+-------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_employee \\\n",
+    "    .groupBy('department_id') \\\n",
+    "    .sum('salary') \\\n",
+    "    .orderBy('department_id', desc = False) \\\n",
+    "    .show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "bfc4276f",
+   "id": "17950952",
    "metadata": {},
    "source": [
     "## SQL Approach"
@@ -261,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "80d2923f",
+   "execution_count": 11,
+   "id": "ffd4dffe",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f4459c",
+   "id": "8bf67b0b",
    "metadata": {},
    "source": [
     "## SPARK SQL Approach"
@@ -309,8 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "842dcb75",
+   "execution_count": 12,
+   "id": "aff0ecb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,8 +357,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c8ef7452",
+   "execution_count": 13,
+   "id": "14bbedb9",
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "656c7c7c",
+   "execution_count": 14,
+   "id": "56ac5991",
    "metadata": {},
    "outputs": [],
    "source": [
